weird button spacing issue

--- a/css/item-detail.css
+++ b/css/item-detail.css
@@ -266,6 +266,7 @@ p[data-type="label"] {
       border-radius: 0;
       z-index: 2;
       padding: 12px;
+      padding-left: 24px;
   }
   .sidebar-wrap .sidebar-box h3,
   .sidebar-wrap .sidebar-box .teacher,
